[fix]:fix content overflow

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -32,6 +32,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .containerInside {
